--- a/src/right-components/Project.css
+++ b/src/right-components/Project.css
@@ -1,17 +1,26 @@
+.projects-wrapper {
+  display: flex;
+  flex-direction: column;
+  gap: 28px;       
+}
+
+.Project-title {
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
 .project-grid {
   display: grid;
   grid-template-rows: repeat(auto-fit, minmax(200px, 1fr));
   gap: 1rem;
+  max-width: 800px;
 }
 
 .project-card {
-  display: block;
-  text-decoration: none;
-  color: inherit;
-  border: 1px solid #ddd;
-  padding: 20px;
-  border-radius: 8px;
-  transition: all 0.2s ease;
+  grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+  gap: 1.5rem;
+  width: 100%;
+  max-width: 1000px
 }
 
 .project-card:hover {
