--- a/src/right-components/about.css
+++ b/src/right-components/about.css
@@ -2,7 +2,6 @@
   display: flex;
   flex-direction: column;
   gap: 28px;
-  margin-left: 160px;
 }
 
 .about-text {
